# sqlitch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  FAQ.md  LICENSE  MANIFEST.in  Makefile  POSTGRESQL_ENGINE_SUMMARY.md  README.md  TODO.md  conftest.py  coverage.xml  docker-compose.yml  install.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sqitch.conf  tox.ini  vulture.toml  vulture_generated_whitelist.py  vulture_whitelist.py
.github/workflows/: ci.yml  release.yml
.kiro/specs/sqlitch-python-port/: design.md  requirements.md  tasks.md
.kiro/steering/: project-guidelines.md  python-standards.md  sqitch-compatibility.md  testing-standards.md
docs/: i18n.md
sqitch_py/: __init__.py
sqitch_py/commands/: __init__.py
sqitch_py/core/: __init__.py  change.py  config.py  exceptions.py  plan.py  target.py
sqitch_py/engines/: __init__.py
sqitch_py/utils/: __init__.py  logging.py
sqlitch/: __init__.py  cli.py
sqlitch/commands/: __init__.py  add.py  base.py  bundle.py  checkout.py  config.py  deploy.py  init.py  log.py  rebase.py  revert.py  show.py  status.py  tag.py  verify.py
sqlitch/core/: __init__.py  change.py  config.py  exceptions.py  plan.py  sqitch.py  target.py  types.py
sqlitch/engines/: __init__.py  base.py  exasol.py  firebird.py  mysql.py  oracle.py  pg.py  snowflake.py  sqlite.py  vertica.py
sqlitch/i18n/: __init__.py  date_time.py  extract_messages.py
sqlitch/i18n/locale/: sqlitch.pot
sqlitch/i18n/locale/de_DE/LC_MESSAGES/: sqlitch.mo  sqlitch.po
sqlitch/i18n/locale/fr_FR/LC_MESSAGES/: sqlitch.mo  sqlitch.po
sqlitch/i18n/locale/it_IT/LC_MESSAGES/: sqlitch.mo  sqlitch.po
sqlitch/utils/: __init__.py  feedback.py  formatter.py  git.py  logging.py  progress.py  template.py
sqlitch_py/: __init__.py  cli.py
sqlitch_py/commands/: base.py  init.py
sqlitch_py/core/: __init__.py  exceptions.py  sqitch.py  target.py
sqlitch_py/engines/: __init__.py  base.py  pg.py
sqlitch_py/utils/: __init__.py  logging.py
tests/: conftest.py
tests/compatibility/: README.md  __init__.py  test_cli_compatibility.py  test_config_compatibility.py  test_framework_validation.py  test_plan_compatibility.py  test_registry_compatibility.py  test_runner.py
tests/docker/: README.md  run_docker_tests.py  test_mysql_docker.py  test_postgresql_docker.py
tests/fixtures/mysql/: init.sql
tests/fixtures/postgresql/: init.sql
tests/integration/: test_add_integration.py  test_bundle_integration.py  test_checkout_integration.py  test_cli_integration.py  test_deploy_integration.py  test_error_handling_integration.py  test_exasol_engine_integration.py  test_firebird_engine_integration.py  test_git_integration.py  test_i18n_integration.py  test_init_integration.py  test_log_integration.py  test_mysql_engine_integration.py  test_oracle_engine_integration.py  test_pg_engine_integration.py  test_rebase_integration.py  test_revert_integration.py  test_show_integration.py  test_simple_integration.py  test_snowflake_engine_integration.py  test_sqlite_engine_integration.py  test_status_integration.py  test_template_integration.py  test_verify_integration.py  test_vertica_engine_integration.py
tests/unit/: test_add_command.py  test_bundle_command.py  test_change.py  test_checkout_command.py  test_cli.py  test_code_quality.py  test_config.py  test_config_command.py  test_deploy_command.py  test_engine_base.py  test_exasol_engine.py  test_exceptions.py  test_extract_messages.py  test_feedback.py  test_firebird_engine.py  test_git.py  test_i18n.py  test_init_command.py  test_log_command.py  test_logging.py  test_mysql_engine.py  test_oracle_engine.py  test_pg_engine.py  test_plan.py  test_progress.py  test_rebase_command.py  test_revert_command.py  test_show_command.py  test_snowflake_engine.py  test_sqitch.py  test_sqlite_engine.py  test_status_command.py  test_tag_command.py  test_target.py  test_template.py  test_verify_command.py  test_vertica_engine.py
